--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,29 @@
-version: "2.2"
+version: "3.9"
 
 services:
-  mysql:
-    image: mysql:8.0
-    ports:
-      - "3306:3306"
-    environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_ALLOW_EMPTY_PASSWORD=true
-      - MYSQL_USER=petclinic
-      - MYSQL_PASSWORD=petclinic
-      - MYSQL_DATABASE=petclinic
-    volumes:
-      - "./conf.d:/etc/mysql/conf.d:ro"
   postgres:
-    image: postgres:15.3
+    image: postgres:15.3-alpine
+    container_name: postgres
     ports:
       - "5432:5432"
     environment:
       - POSTGRES_PASSWORD=petclinic
       - POSTGRES_USER=petclinic
       - POSTGRES_DB=petclinic
+    networks: [ "my_network" ]
+
+  spring_petclinic:
+    image: eric6166/spring-petclinic:1.0
+    container_name: spring_petclinic
+    ports:
+      - "8080:8080"
+    environment:
+      - POSTGRES_URL=jdbc:postgresql://postgres:5432/petclinic
+      - POSTGRES_PASSWORD=petclinic
+      - POSTGRES_USER=petclinic
+    depends_on:
+      - postgres
+    networks: [ "my_network" ]
+networks:
+  my_network:
+    name: my_network
